--- a/MasterCatalog.Web/MasterCatalog.Web.csproj
+++ b/MasterCatalog.Web/MasterCatalog.Web.csproj
@@ -17,17 +17,55 @@
 
   <ItemGroup>
     <None Include="compilerconfig.json" />
+    <None Include="wwwroot\js\components\company\Catalog.js" />
+    <None Include="wwwroot\js\components\company\CatalogGrid.js" />
+    <None Include="wwwroot\js\components\company\CatalogGridHeader.js" />
+    <None Include="wwwroot\js\components\company\CompanyForm.js" />
+    <None Include="wwwroot\js\components\company\CompanyGrid.js" />
+    <None Include="wwwroot\js\components\company\Index.js" />
+    <None Include="wwwroot\js\components\company\ItemSelector.js" />
+    <None Include="wwwroot\js\components\company\PriceUpdateForm.js" />
+    <None Include="wwwroot\js\components\itemAttributes\AttributeForm.js" />
+    <None Include="wwwroot\js\components\itemAttributes\AttributeGrid.js" />
+    <None Include="wwwroot\js\components\itemAttributes\Index.js" />
+    <None Include="wwwroot\js\components\items\CompanySelectorjs.js" />
+    <None Include="wwwroot\js\components\items\ImageManager.js" />
+    <None Include="wwwroot\js\components\items\Index.js" />
+    <None Include="wwwroot\js\components\items\ItemAttributeOrderEditor.js" />
+    <None Include="wwwroot\js\components\items\ItemAttributeRecord.js" />
+    <None Include="wwwroot\js\components\items\ItemAttributes.js" />
+    <None Include="wwwroot\js\components\items\ItemAttributeSelector.js" />
+    <None Include="wwwroot\js\components\items\ItemDetails.js" />
+    <None Include="wwwroot\js\components\items\ItemGrid.js" />
+    <None Include="wwwroot\js\components\items\ItemGridHeader.js" />
+    <None Include="wwwroot\js\components\items\ItemImages.js" />
+    <None Include="wwwroot\js\components\items\ItemRecipe.js" />
+    <None Include="wwwroot\js\components\items\List.js" />
+    <None Include="wwwroot\js\components\recipe\Index.js" />
+    <None Include="wwwroot\js\components\recipe\IngredientForm.js" />
+    <None Include="wwwroot\js\components\recipe\IngredientGrid.js" />
+    <None Include="wwwroot\js\components\shared\buttons\ButtonIcon.js" />
+    <None Include="wwwroot\js\components\shared\buttons\ButtonPrimary.js" />
+    <None Include="wwwroot\js\components\shared\buttons\ButtonPrimaryOutlined.js" />
+    <None Include="wwwroot\js\components\shared\dialogs\DialogAlert.js" />
+    <None Include="wwwroot\js\components\shared\dialogs\DialogConfirmation.js" />
+    <None Include="wwwroot\js\components\shared\links\Anchor.js" />
+    <None Include="wwwroot\js\components\shared\messageCenter\MessageCenter.js" />
+    <None Include="wwwroot\js\components\shared\messageCenter\MessageDanger.js" />
+    <None Include="wwwroot\js\components\shared\messageCenter\MessageSuccess.js" />
+    <None Include="wwwroot\js\components\shared\placeholders\FieldSavingStatus.js" />
+    <None Include="wwwroot\js\components\shared\placeholders\FormFieldPlaceholder.js" />
+    <None Include="wwwroot\js\components\shared\placeholders\TablePlaceholder.js" />
+    <None Include="wwwroot\js\components\unitOfMeasure\Index.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="wwwroot\js\components\unitOfMeasure\UnitOfMeasureForm.js" />
+    <None Include="wwwroot\js\components\unitOfMeasure\UnitOfMeasureGrid.js" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Views\UnitOfMeasure\Index.cshtml.js">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
   <ItemGroup>
