--- a/MasterCatalog.Web/appsettings.json
+++ b/MasterCatalog.Web/appsettings.json
@@ -8,13 +8,5 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
   },
-  "ApiEndPointUrl": "",
-  "AzureAd": {
-    "ClientId": "",
-    "Instance": "",
-    "TenantId": "",
-    "SkipUnrecognizedRequests": "",
-    "ClientSecret": "",
-    "SignedOutRedirectUri": ""
-  }
+  "ApiEndPointUrl": ""
 }
