--- a/.github/workflows/main_ww-master-catalog-web.yml
+++ b/.github/workflows/main_ww-master-catalog-web.yml
@@ -28,12 +28,12 @@ jobs:
       - name: dotnet publish
         run: dotnet publish ${{github.workspace}}/MasterCatalog.Web/MasterCatalog.Web.csproj -c Release -o ${{env.DOTNET_ROOT}}/deployment
 
-      - name: App Settings Variable Substitution
-        uses: microsoft/variable-substitution@v1
+      - name: Set property string value in a json file
+        uses: benday-inc/set-property-value-in-appsettings@v1.4
         with:
-         files: '${{env.DOTNET_ROOT}}/deployment/appsettings.json'
-        env:
-           ApiEndPointUrl: ${{ env.APIENDPOINTURL }}
+          pathToSettingsFile: ${{env.DOTNET_ROOT}}/deployment/appsettings.json
+          keyname1: ApiEndPointUrl 
+          valueToSet: ${{ vars.APIENDPOINTURL }}          
         
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
