--- a/.github/workflows/main_ww-master-catalog-api.yml
+++ b/.github/workflows/main_ww-master-catalog-api.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - ww-master-catalog-api
+name: Master Catalog API (ww-master-catalog-api)
 
 on:
   push:
