--- a/MasterCatalog.Web/MasterCatalog.Web.csproj
+++ b/MasterCatalog.Web/MasterCatalog.Web.csproj
@@ -17,30 +17,30 @@
 
   <ItemGroup>
     <None Include="compilerconfig.json" />
-    <None Include="wwwroot\js\components\company\Catalog.js" />
-    <None Include="wwwroot\js\components\company\CatalogGrid.js" />
-    <None Include="wwwroot\js\components\company\CatalogGridHeader.js" />
+    <None Include="wwwroot\js\components\catalog\Catalog.js" />
+    <None Include="wwwroot\js\components\catalog\CatalogGrid.js" />
+    <None Include="wwwroot\js\components\catalog\CatalogGridHeader.js" />
     <None Include="wwwroot\js\components\company\CompanyForm.js" />
     <None Include="wwwroot\js\components\company\CompanyGrid.js" />
     <None Include="wwwroot\js\components\company\Index.js" />
-    <None Include="wwwroot\js\components\company\ItemSelector.js" />
-    <None Include="wwwroot\js\components\company\PriceUpdateForm.js" />
+    <None Include="wwwroot\js\components\items\ItemSelector.js" />
+    <None Include="wwwroot\js\components\catalog\PriceUpdateForm.js" />
     <None Include="wwwroot\js\components\itemAttributes\AttributeForm.js" />
     <None Include="wwwroot\js\components\itemAttributes\AttributeGrid.js" />
     <None Include="wwwroot\js\components\itemAttributes\Index.js" />
-    <None Include="wwwroot\js\components\items\CompanySelectorjs.js" />
-    <None Include="wwwroot\js\components\items\ImageManager.js" />
-    <None Include="wwwroot\js\components\items\Index.js" />
-    <None Include="wwwroot\js\components\items\ItemAttributeOrderEditor.js" />
-    <None Include="wwwroot\js\components\items\ItemAttributeRecord.js" />
-    <None Include="wwwroot\js\components\items\ItemAttributes.js" />
-    <None Include="wwwroot\js\components\items\ItemAttributeSelector.js" />
-    <None Include="wwwroot\js\components\items\ItemDetails.js" />
+    <None Include="wwwroot\js\components\company\CompanySelector.js" />
+    <None Include="wwwroot\js\components\item\ItemImageManager.js" />
+    <None Include="wwwroot\js\components\item\Item.js" />
+    <None Include="wwwroot\js\components\item\ItemAttributeOrderEditor.js" />
+    <None Include="wwwroot\js\components\item\ItemAttributeRecord.js" />
+    <None Include="wwwroot\js\components\item\ItemAttributes.js" />
+    <None Include="wwwroot\js\components\item\ItemAttributeSelector.js" />
+    <None Include="wwwroot\js\components\item\ItemDetails.js" />
     <None Include="wwwroot\js\components\items\ItemGrid.js" />
     <None Include="wwwroot\js\components\items\ItemGridHeader.js" />
-    <None Include="wwwroot\js\components\items\ItemImages.js" />
-    <None Include="wwwroot\js\components\items\ItemRecipe.js" />
-    <None Include="wwwroot\js\components\items\List.js" />
+    <None Include="wwwroot\js\components\item\ItemImages.js" />
+    <None Include="wwwroot\js\components\item\ItemRecipe.js" />
+    <None Include="wwwroot\js\components\items\Index.js" />
     <None Include="wwwroot\js\components\recipe\Index.js" />
     <None Include="wwwroot\js\components\recipe\IngredientForm.js" />
     <None Include="wwwroot\js\components\recipe\IngredientGrid.js" />
@@ -50,7 +50,7 @@
     <None Include="wwwroot\js\components\shared\dialogs\DialogAlert.js" />
     <None Include="wwwroot\js\components\shared\dialogs\DialogConfirmation.js" />
     <None Include="wwwroot\js\components\shared\links\Anchor.js" />
-    <None Include="wwwroot\js\components\shared\messageCenter\MessageCenter.js" />
+    <None Include="wwwroot\js\components\shared\messageCenter\Index.js" />
     <None Include="wwwroot\js\components\shared\messageCenter\MessageDanger.js" />
     <None Include="wwwroot\js\components\shared\messageCenter\MessageSuccess.js" />
     <None Include="wwwroot\js\components\shared\placeholders\FieldSavingStatus.js" />
